# kosk

./: .gcloudignore  .gitignore  README.md  app.yaml  dispatch.yaml
backend/: app.yaml  launchlocal  local_settings.py  pyproject.toml  requirements.txt
backend/kosk/: main.py  settings.py
backend/kosk/statamic/: api_statamic.py  md_statamic.py  statamic.py
backend/libs/: reddevil-3.2.0-py3-none-any.whl  reddevil-3.3.0-py3-none-any.whl  reddevil-3.3.5-py3-none-any.whl
content/calendar/: overige.yaml  vrijdag.yaml  zondag.yaml
frontend/: .gcloudignore  .gitignore  README.md  app.vue  app.yaml  nuxt.config.js  package.json
frontend/api/: content.js  filestore.js
frontend/components/: ProgressLoading.vue  SnackbarMessage.vue  TheCarousel.vue  TheFooter.vue
frontend/composables/: useMarkdown.js
frontend/layouts/: default.vue  mgmt.vue
frontend/pages/: bestuur.vue  clubkampioenschap.vue  index.vue  jeugdkalender.vue  kalender.vue
frontend/pages/archive/: [slug].vue
frontend/pages/article/: [slug].vue
frontend/pages/mgmt/: index.vue  logout.vue  overview.vue
frontend/pages/page/: [slug].vue
frontend/plugins/: backend.js
frontend/public/css/: kosk.css
frontend/store/: mgmttoken.js  person.js
