[tool.poetry]
name = "kosk-be"
version = "0.1.0"
description = "Kosk backend"
authors = ["Ruben Decrop <ruben@kosk.be>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
reddevil = {path = "libs/reddevil-3.3.0-py3-none-any.whl"}
toml = "^0.10.2"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
